Issue #21704: Fix build error for _multiprocessing when semaphores are not available.  Patch by Arfrever Frehtes Taifersar Arahesis.